Revive QQuickWidget rendering

Follows 3d03f4e989e0ae53569a1a2e390d71c41d91f329. After that patch nothing guaranteed
that qt_registerDefaultPlatformBackingStoreOpenGLSupport() got called in QQuickWidget
applications (unless they also use QOpenGLWidget, which is rare). This is now
corrected.

Fixes: QTBUG-86335
Change-Id: I0420bbf97ca6c72227aa58a1d083fef04f86a1f8
Reviewed-by: Andy Nichols <andy.nichols@qt.io>